<resources>
    <string name="app_name">Pajareando Ando</string>
    <string name="login_title">Pajareando Ando</string>
    <string name="name_login">Escriba su nombre</string>
    <string name="enter">Ingresar</string>
    <string name="login_password">Escriba la contraseña</string>
    <string name="consultar">Consultar</string>
    <string name="registrar">Registrar</string>
    <string name="quequiereshacer">¿Qué quieres hacer?</string>
    <string name="about_bird_picture">NUEVA AVE</string>
    <string name="bird_name">Nombre del ave</string>
    <string name="predominant_colors">Colores predominantes</string>
    <string name="ubication">Ubicación</string>
    <string name="color_1">Color 1</string>
    <string name="color_3">Color 3</string>
    <string name="color_2">Color 2</string>
    <string name="color_4">Color 4</string>
    <string name="tiene_m_s_de_4_colores">Tiene más de 4 colores</string>
    <string name="review">Reseña</string>
    <string name="takePicture">Tomar foto</string>
    <string name="register">Registrar</string>
    <string name="volver">Volver</string>
    <string name="review_your_bird">Reseña de tu ave</string>
    <string name="latitud">Latitud:</string>
    <string name="longitud">Longitud:</string>
    <string name="tomada_el">Tomada el:</string>
    <string name="bird_size">Tamaño del ave</string>
    <string name="bird_type">Tipo de ave</string>
    <string name="consultBirds">Consulta de aves</string>
    <string name="lastBird">Últimas aves fotografiadas</string>
    <string name="consultAllDetails">Detalles</string>
    <string name="reviewDetail">Detalle Ave</string>
    <string name="registro_de_usuario">Registro de usuario</string>
    <string name="escriba_su_email">Escriba su email</string>
    <string name="confirme_contrasena">Confirme contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="solicitud_para_registrarse">¿No tiene usuario?¡Regístrese!</string>
    <string name="salir">Salir</string>
    <string name="obtener_ubicacion">Obtener ubicación</string>
    <string name="detalle_de_colores_del_ave">Detalle de colores del ave</string>
    <string name="detalle_nombre_de_ave">detalle_nombre_de_ave</string>
    <string name="detalle_de_mas_de_cuatro_colores">detalle de mas de cuatro colores</string>
    <string name="Colores">Colores:</string>
    <string name="Tiene_mas_de_4_colores">Tiene mas de cuatro colores</string>
    <string name="no_tiene_mas_de_cuatro_colores">No tiene mas de cuatro colores</string>
    <string name="detalle_fecha_fotografia">detalle fecha fotografia</string>
    <string name="detalle_ubicacion_ave">detalle_ubicacion_ave</string>
    <string name="detalle_tipo_de_ave">detalle tipo de ave</string>
    <string name="detalle_dimension_del_ave">detalle tamaño del ave</string>
    <string name="detalle_descripcion_ave">detalle reseña del ave</string>
    <string name="ubicacion_del_ave">Ubicación del ave:</string>
    <string name="tipo_de_ave">\"Tipo de ave: \"</string>
    <string name="dimension_del_ave">\Tamaño del ave: \"</string>
    <string name="descripcion_del_ave">Reseña del ave:</string>
    <string name="bird_deleted">Ave eliminada</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="edit_bird">Editar ave</string>
    <string name="Guardar">Guardar</string>


</resources>