<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BirdConsultAllActivity">

    <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="#3F728A"
            android:layout_height="wrap_content"
            android:padding="20dp">

        <TextView
                android:id="@+id/titleConsultAll"
                android:layout_width="332dp"
                android:layout_height="53dp"
                android:textAlignment="center"
                android:text="@string/consultBirds"
                android:textColor="@color/white"
                android:textSize="35sp" />
    </LinearLayout>

    <TextView
            android:id="@+id/subTitleConsultAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:text="@string/lastBird"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:textSize="18sp" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="none">

        <LinearLayout
                android:id="@+id/birdContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp">

        <Button
                android:text="@string/volver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnBackGoToConsultAll"
                android:layout_marginHorizontal="@dimen/form_button_margin"
                android:onClick="goToMain" />
    </LinearLayout>
    <!---> ********** <!-->

    <!---> ********** <!-->

    <!---> ********** <!-->

</LinearLayout>