<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/form_button_margin"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/form_button_margin">

            <ImageView
                    android:id="@+id/birdImage"
                    android:layout_width="@dimen/form_image_size"
                    android:layout_height="@dimen/form_image_size"
                    android:layout_weight="1"
                    android:contentDescription="@string/bird_name"
                    app:srcCompat="@drawable/pajaro" />
        </com.google.android.material.card.MaterialCardView>

        <!---> ********** <!-->
        <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="@dimen/bird_detail">

            <TextView
                    android:id="@+id/birdName"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bird_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:gravity="center">

                <Button
                        android:id="@+id/birdDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/consultAllDetails"
                        android:onClick="goToActivityBirdDetail" />
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:gravity="center">

                <Button
                        android:id="@+id/birdDelete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/red"
                        android:textColor="@android:color/white"
                        android:text="@string/eliminar"
                        android:onClick="delete"/>
            </LinearLayout>


            <TextView
                android:id="@+id/birdColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Color" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>