<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BirdDetailActivity"
    android:padding="20dp"
    android:orientation="vertical">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/form_button_margin"
                android:layout_margin="@dimen/form_button_margin"
                android:layout_weight="1">

            <ImageView
                    android:layout_width="@dimen/form_image_size"
                    android:layout_height="@dimen/form_image_size"
                    app:srcCompat="@drawable/pajaro"
                    android:id="@+id/birdImage"
                    android:layout_weight="1"
                    android:contentDescription="@string/bird_name" />
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textNameBird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reviewDetail"
            android:textColor="@color/black"
            android:textSize="@dimen/form_colors"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reviewDetailDescription"
            android:textColor="@color/black"
            android:textSize="@dimen/form_colors"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/form_button_margin"
            >

        <Button
                android:text="@string/volver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnBackGoToConsultAll"
                android:layout_marginHorizontal="@dimen/form_button_margin"
                android:layout_weight="1"
                android:onClick="goToConsultAll"/>
    </LinearLayout>

</LinearLayout>